[gd_scene load_steps=17 format=3 uid="uid://clklxevspiog1"]

[ext_resource type="Script" path="res://challenges/syllables_and_sounds/syllables_and_sounds.gd" id="1_nbs6o"]
[ext_resource type="Theme" uid="uid://inr4tcdwqeln" path="res://game_theme.tres" id="1_wsqwa"]
[ext_resource type="PackedScene" uid="uid://bf14kfetgi42a" path="res://challenges/difficulty_picker.tscn" id="3_44cij"]
[ext_resource type="StyleBox" uid="uid://bmtno08nqs6pn" path="res://challenges/syllables_and_sounds/tile_word.tres" id="5_h2js1"]
[ext_resource type="FontFile" uid="uid://b1m3k21x6lka2" path="res://assets/fonts/unicode_scribbles.ttf" id="5_onty1"]
[ext_resource type="Texture2D" uid="uid://binjtnji0ui34" path="res://challenges/syllables_and_sounds/tile_normal.png" id="7_ie6fc"]
[ext_resource type="StyleBox" uid="uid://bqjarn0k4fvdj" path="res://assets/textures/button_red_normal.tres" id="8_b2nmc"]
[ext_resource type="StyleBox" uid="uid://luh86sdmhuk6" path="res://challenges/syllables_and_sounds/sound_word.tres" id="8_hd7t7"]
[ext_resource type="StyleBox" uid="uid://cxdfoh4w6a50m" path="res://assets/textures/label_white_background.tres" id="8_wey6f"]
[ext_resource type="StyleBox" uid="uid://b8sd2ak62bjjf" path="res://assets/textures/button_red_hover.tres" id="9_jrqfr"]
[ext_resource type="StyleBox" uid="uid://dpcynf862ebhl" path="res://assets/textures/button_red_pressed.tres" id="10_n3ovy"]
[ext_resource type="StyleBox" uid="uid://dpfcv3w4h8pex" path="res://assets/textures/button_blue_normal.tres" id="11_jsmv0"]
[ext_resource type="Texture2D" uid="uid://b3h24ubic1ml1" path="res://assets/images/icons/icon_correct.png" id="11_lgjg5"]
[ext_resource type="Texture2D" uid="uid://b41eqlaypysll" path="res://assets/images/icons/icon_incorrect.png" id="12_fbifh"]
[ext_resource type="StyleBox" uid="uid://dg40rqogri1ar" path="res://assets/textures/button_blue_hover.tres" id="12_vk213"]
[ext_resource type="StyleBox" uid="uid://d354art3id1bn" path="res://assets/textures/button_blue_pressed.tres" id="13_r3frw"]

[node name="SoundsAndSyllables" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wsqwa")
script = ExtResource("1_nbs6o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyPicker" parent="MarginContainer" instance=ExtResource("3_44cij")]
unique_name_in_owner = true
layout_mode = 2

[node name="SyllablesChallenge" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SyllablesChallenge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 72
text = "Zaznacz po kolei sylaby poniższego słowa"
horizontal_alignment = 1

[node name="SyllablesWord" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = ExtResource("5_h2js1")
text = "Słowo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/SyllablesChallenge/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 128
theme_override_constants/v_separation = 64
alignment = 1

[node name="Syllable1" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Syllable2" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Syllable3" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Syllable4" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Syllable5" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Syllable6" type="TextureButton" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 193)
layout_mode = 2
texture_normal = ExtResource("7_ie6fc")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.3
anchor_right = 0.938
anchor_bottom = 0.875
offset_top = -0.300003
offset_right = 0.899994
offset_bottom = 0.542
theme_override_fonts/font = ExtResource("5_onty1")
theme_override_font_sizes/font_size = 60
text = "Sylaba 6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundsChallenge" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SoundsChallenge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 196
alignment = 1

[node name="SoundCountChallenge" type="VBoxContainer" parent="MarginContainer/SoundsChallenge/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="SoundsWord" type="Label" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundCountChallenge"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = ExtResource("8_hd7t7")
text = "Słowo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundsCounter" type="LineEdit" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundCountChallenge"]
unique_name_in_owner = true
custom_minimum_size = Vector2(480, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
placeholder_text = "Wpisz liczbę głosek"
alignment = 1
virtual_keyboard_type = 2
caret_blink = true

[node name="SoundTypesChallenge" type="VBoxContainer" parent="MarginContainer/SoundsChallenge/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 72
text = "Jakiego rodzaju głoską jest poniższa litera?"
horizontal_alignment = 1

[node name="CurrentSound" type="Label" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.00392157, 0, 0.00392157, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 96
theme_override_styles/normal = ExtResource("8_wey6f")
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="Vowel" type="Button" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("8_b2nmc")
theme_override_styles/hover = ExtResource("9_jrqfr")
theme_override_styles/pressed = ExtResource("10_n3ovy")
text = "Samogłoska"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer"]
custom_minimum_size = Vector2(88, 88)
layout_mode = 2

[node name="IconCorrect" type="TextureRect" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
texture = ExtResource("11_lgjg5")
expand_mode = 1

[node name="IconIncorrect" type="TextureRect" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(88, 88)
layout_mode = 2
texture = ExtResource("12_fbifh")
expand_mode = 1

[node name="Consonant" type="Button" parent="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("11_jsmv0")
theme_override_styles/hover = ExtResource("12_vk213")
theme_override_styles/pressed = ExtResource("13_r3frw")
text = "Spółgłoska"

[connection signal="difficulty_picked" from="MarginContainer/DifficultyPicker" to="." method="_on_difficulty_picked"]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable1" to="." method="_on_syllable_pressed" binds= [0]]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable2" to="." method="_on_syllable_pressed" binds= [1]]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable3" to="." method="_on_syllable_pressed" binds= [2]]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable4" to="." method="_on_syllable_pressed" binds= [3]]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable5" to="." method="_on_syllable_pressed" binds= [4]]
[connection signal="pressed" from="MarginContainer/SyllablesChallenge/VBoxContainer/MarginContainer/HFlowContainer/Syllable6" to="." method="_on_syllable_pressed" binds= [5]]
[connection signal="text_submitted" from="MarginContainer/SoundsChallenge/VBoxContainer/SoundCountChallenge/SoundsCounter" to="." method="_on_sound_count_text_submitted"]
[connection signal="pressed" from="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer/Vowel" to="." method="_on_vowel_pressed"]
[connection signal="pressed" from="MarginContainer/SoundsChallenge/VBoxContainer/SoundTypesChallenge/HBoxContainer/Consonant" to="." method="_on_consonant_pressed"]
